--- a/app/src/main/res/layout/custom_spin_layout.xml
+++ b/app/src/main/res/layout/custom_spin_layout.xml
@@ -11,10 +11,12 @@
             android:layout_gravity="center"
             android:layout_weight="25"
             tools:srcCompat="@tools:sample/avatars" />
-        <TextView
-            android:id="@+id/tV"
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="75"
-            android:gravity="left|center_vertical" />
+
+    <TextView
+        android:id="@+id/tV"
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:layout_weight="75"
+        android:gravity="left|center_vertical"
+        android:textSize="20sp" />
     </LinearLayout>
